[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colav-protobuf-generator"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ryan", email = "r.mckee@qub.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Ryan/colav-protobuf-generator#readme"
Issues = "https://github.com/Ryan/colav-protobuf-generator/issues"
Source = "https://github.com/Ryan/colav-protobuf-generator"

[tool.hatch.version]
path = "src/colav_protobuf_generator/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/colav_protobuf_generator tests}"

[tool.coverage.run]
source_pkgs = ["colav_protobuf_generator", "tests"]
branch = true
parallel = true
omit = [
  "src/colav_protobuf_generator/__about__.py",
]

[tool.coverage.paths]
colav_protobuf_generator = ["src/colav_protobuf_generator", "*/colav-protobuf-generator/src/colav_protobuf_generator"]
tests = ["tests", "*/colav-protobuf-generator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
